Added stats logging, caches are marked as BAD if it contains any hosts older than 3 days, changed URL advertising, changed $client handling slightly, added stats to readme.txt, and added stats.ini file

--- a/config/config.ini
+++ b/config/config.ini
@@ -15,4 +15,5 @@ Store     = 50 ; Max hosts to store [default 50]
 [Path]
 Ban       = data/bans.dat
 Host      = data/hosts.dat
+Stats     = data/stats.ini ; To disable stats, delete this file
 URL       = data/urls.dat
