--- a/trunk/config/config.ini
+++ b/trunk/config/config.ini
@@ -15,4 +15,5 @@ Store     = 50 ; Max hosts to store [default 50]
 [Path]
 Ban       = data/bans.dat
 Host      = data/hosts.dat
+Stats     = data/stats.ini ; To disable stats, delete this file
 URL       = data/urls.dat
