--- a/config/config.ini.sample
+++ b/config/config.ini.sample
@@ -17,5 +17,5 @@ Store     = 50 ; Max hosts to store [default 50]
 [Path]
 Ban       = data/bans.dat
 Host      = data/hosts.dat
-Stats     = data/stats.ini ; To disable stats, delete this file
+Stats     = data/stats.ini ; To enable stats, create this file
 URL       = data/urls.dat
