Added update notification, updated Mute URLS, moved some settings to main.php, added statfile for GWC1 stats, updated readme.txt, updated CSS, updated config.ini.sample

--- a/config/config.ini.sample
+++ b/config/config.ini.sample
@@ -22,10 +22,12 @@ Host      = data/<network>/hosts.dat
 URL       = data/<network>/urls.dat
 Stats     = data/<network>/stats.dat
 Start     = data/<network>/start.dat
+Update    = data/update.dat
 
 [Interface]
 Show      = 1 ; If non-zero, will show Web interface
 Info      = 1 ; If non-zero, will show stats, services, hosts
+Update    = 1 ; If non-zero, will show if cache needs an update
 
 [Stats]
 Enable    = 1;
