--- a/trunk/config/config.ini.sample
+++ b/trunk/config/config.ini.sample
@@ -12,7 +12,7 @@ Output    = 30 ; Max URLs to output [default 30]
 TestAge   = 86400 ; Min age to test a URL [default 1 day]
 
 [Host]
-Age       = 57600 ; Max age to keep in cache [default 16 hours]
+Age       = 86400 ; Max age to keep in cache [default 1 day]
 Output    = 30 ; Max hosts to output and store [default 30]
 Testing   = 1 ; If the server can only test port 80, set this option to 0 [default 1]
 
